<resources>
    <string name="app_name">HomeFullShelter</string>
    <string name="registration">Registration</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="title_activity_logout">Logout</string>
    <string name="logout">Logout</string>
    <string name="title_activity_registration">Register a new Home-Full account!</string>
    <string name="title_activity_detail_list">DataItemDetailActivity</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="cancel">Cancel</string>
    <string name="already_have_an_account">Already have an account?  Click HERE to login</string>
    <string name="welcome_to_home_full_shelter">Welcome to Home-Full Shelter!</string>
    <string name="title_activity_vacancyview">VACANCYVIEWPRAT</string>
    <string name="title_activity_shelter_maps">Map</string>
</resources>
